feat: İngilizce sektör çevirisi ve iki dilli ünvan sistemi
🌐 Sektör Çevirisi Sistemi:
- İngilizce sayfada sektörler çevrildi
- Diğer → Other
- Ev Tekstili → Home Textile & Decoration
- Moda ve Tekstil → Fashion & Textile
- Güzellik → Beauty & Cosmetics
- Enerji → Energy
- İnşaat → Construction

👔 İki Dilli Ünvan Sistemi:
- title_tr: Türkçe ünvan seçenekleri
- title_en: İngilizce ünvan seçenekleri
- Select widget ile kolay seçim
- Geriye uyumluluk korundu

🎯 CMS Ünvan Seçenekleri:
Türkçe: Satış Direktörü, Satış Temsilcisi, Satış Yöneticisi, Bölge Müdürü
İngilizce: Sales Director, Sales Representative, Sales Manager, Regional Manager

✅ İngilizce 2026 Sayfası:
- CMS entegrasyonu tam çalışıyor
- 12 fuar İngilizce gösteriliyor
- Sektörler İngilizce çevrildi
- Card tasarımı optimize

🔧 Schema Güncellemesi:
- title_tr ve title_en alanları eklendi
- Tüm representative alanları opsiyonel
- Content store cache temizlendi

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -70,7 +70,9 @@ collections:
                 collapsed: true
                 fields:
                   - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan", name: "title", widget: "string", required: false, hint: "Örnek: Satış Direktörü"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
                   - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
                   - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
@@ -146,7 +148,9 @@ collections:
                 collapsed: true
                 fields:
                   - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan", name: "title", widget: "string", required: false, hint: "Örnek: Satış Direktörü"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
                   - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
                   - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
@@ -222,7 +226,9 @@ collections:
                 collapsed: true
                 fields:
                   - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan", name: "title", widget: "string", required: false, hint: "Örnek: Satış Direktörü"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
                   - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
                   - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
@@ -298,7 +304,9 @@ collections:
                 collapsed: true
                 fields:
                   - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan", name: "title", widget: "string", required: false, hint: "Örnek: Satış Direktörü"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
                   - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
                   - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
@@ -374,7 +382,9 @@ collections:
                 collapsed: true
                 fields:
                   - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan", name: "title", widget: "string", required: false, hint: "Örnek: Satış Direktörü"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
                   - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
                   - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
