feat: CMS temizleme, telefon gizleme ve form entegrasyonu tamamlandı
🧹 CMS Temizleme:
- Eski unvan alanı kaldırıldı
- required: false kaldırıldı (sadece telefon hariç)
- Daha temiz CMS arayüzü

📞 Telefon Gizleme Sistemi:
- Telefon boşsa icon ve numara gizleniyor
- Koşullu rendering: {fair.representative.phone && (...)}
- Temiz card görünümü

👔 İki Dilli Ünvan Sistemi:
- title_tr: Türkçe select seçenekleri
- title_en: İngilizce select seçenekleri
- Kolay seçim sistemi

📋 Form Entegrasyonu Başarılı:
- CMS'ten 16 fuar form'lara yüklendi ✅
- show_in_forms: true olan fuarlar otomatik
- İki dilli form desteği
- Visitor ve Participant form'lar güncelendi

🔧 Util Fonksiyonu:
- getFairOptions() fonksiyonu oluşturuldu
- CMS'ten dinamik fuar listesi
- Fallback sistem korundu
- Dil bazında fuar isimleri

✅ Debug Sonuçları:
- 16 fuar Türkçe form'larda ✅
- 16 fuar İngilizce form'larda ✅
- Telefon gizleme çalışıyor ✅
- Sektör çevirisi aktif ✅

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -69,12 +69,11 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
-                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
-                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
-                  - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
-                  - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
+                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", hint: "Örnek: Seval Arslan"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "📧 E-posta", name: "email", widget: "string", hint: "Örnek: seval@turkel.com.tr"}
+                  - {label: "📞 Telefon (İsteğe bağlı)", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
                 name: "slider_content"
                 widget: "object"
@@ -147,12 +146,11 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
-                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
-                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
-                  - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
-                  - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
+                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", hint: "Örnek: Seval Arslan"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "📧 E-posta", name: "email", widget: "string", hint: "Örnek: seval@turkel.com.tr"}
+                  - {label: "📞 Telefon (İsteğe bağlı)", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
                 name: "slider_content"
                 widget: "object"
@@ -225,12 +223,11 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
-                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
-                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
-                  - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
-                  - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
+                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", hint: "Örnek: Seval Arslan"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "📧 E-posta", name: "email", widget: "string", hint: "Örnek: seval@turkel.com.tr"}
+                  - {label: "📞 Telefon (İsteğe bağlı)", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
                 name: "slider_content"
                 widget: "object"
@@ -303,12 +300,11 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
-                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
-                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
-                  - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
-                  - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
+                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", hint: "Örnek: Seval Arslan"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "📧 E-posta", name: "email", widget: "string", hint: "Örnek: seval@turkel.com.tr"}
+                  - {label: "📞 Telefon (İsteğe bağlı)", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
                 name: "slider_content"
                 widget: "object"
@@ -381,12 +377,11 @@ collections:
                 widget: "object"
                 collapsed: true
                 fields:
-                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", required: false, hint: "Örnek: Seval Arslan"}
-                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", required: false, options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
-                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", required: false, options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
-                  - {label: "🏢 Eski Unvan", name: "title", widget: "string", required: false, hint: "Geriye uyumluluk için - yeni fuarlarda kullanmayın"}
-                  - {label: "📧 E-posta", name: "email", widget: "string", required: false, hint: "Örnek: seval@turkel.com.tr"}
-                  - {label: "📞 Telefon", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
+                  - {label: "👤 Temsilci Adı", name: "name", widget: "string", hint: "Örnek: Seval Arslan"}
+                  - {label: "🏢 Unvan (Türkçe)", name: "title_tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi", "Satış Yöneticisi", "Bölge Müdürü", "İş Geliştirme Müdürü"], hint: "Türkçe ünvan seçin"}
+                  - {label: "🏢 Unvan (İngilizce)", name: "title_en", widget: "select", options: ["Sales Director", "Sales Representative", "Sales Manager", "Regional Manager", "Business Development Manager"], hint: "English title selection"}
+                  - {label: "📧 E-posta", name: "email", widget: "string", hint: "Örnek: seval@turkel.com.tr"}
+                  - {label: "📞 Telefon (İsteğe bağlı)", name: "phone", widget: "string", required: false, hint: "Örnek: +90 216 123 45 68"}
               - label: "🌐 Slider İçin Ek Bilgiler"
                 name: "slider_content"
                 widget: "object"
